--- a/css/settings.css
+++ b/css/settings.css
@@ -1429,12 +1429,14 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	border-color: #4268CF;
 }
 .fz-upsell-notice {
-	padding: 6px 8px 6px 8px;
+	padding: 8px 32px 8px 8px;
     background: #CCE5FF;
     font-size: 14px;
     text-align: left;
     color: #264494;
     font-weight: 400;
+    line-height: 16px;
+    position: relative;
 }
 .fz-upsell-notice a,
 .fz-upsell-notice .remove-alert {
@@ -1446,5 +1448,8 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	color: #264494;
 }
 .fz-upsell-notice .remove-alert {
-	right: 10px;
+	position: absolute;
+	top: 50%;
+	right: 8px;
+	margin-top: -12px;
 }
