Add setup wizard Codeinwp/feedzy-rss-feeds-pro#483

--- a/css/feedzy-rss-feed-import.css
+++ b/css/feedzy-rss-feed-import.css
@@ -276,6 +276,11 @@ i.mce-i-feedzy-icon {
 	font-weight: 300;
 	text-align: center;
 }
+
+.toplevel_page_feedzy-admin-menu ul.wp-submenu li:nth-child(6) {
+	display: none;
+}
+
 @media screen and (max-width: 782px) {
 	tr.feedzy-import-status-row table {
 		width: 100%;
