--- a/css/settings.css
+++ b/css/settings.css
@@ -46,6 +46,11 @@
 	font-weight: 600;
 	color: #050505;
 }
+.p{
+	font-size: 16px;
+	line-height: 24px;
+	color: #050505;
+}
 
 .form-label{
 	font-size: 16px;
@@ -75,6 +80,7 @@
 .p-8{padding: 8px;}
 .pt-8{padding-top: 8px;}
 .pb-8{padding-bottom: 8px;}
+.pb-4{padding-bottom: 4px;}
 .pb-0{padding-bottom: 0 !important;}
 .pt-12{padding-top: 12px;}
 .pb-16{padding-bottom: 16px;}
@@ -118,6 +124,9 @@
 	background: #ffffff;
 	border: 1px solid #D9D9D9;
 }
+.feedzy-accordion-item__title{
+	position: relative;
+}
 .feedzy-accordion-item .feedzy-accordion-item__button{
 	width: 100%;
 	position: relative;
@@ -153,6 +162,13 @@
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+.feedzy-accordion-item .feedzy-accordion__icon.feedzy-accordion__icon--success{
+	width: 24px;
+	height: 24px;
+	margin-top: -12px;
+	background: #4268CF !important;
+	color: #ffffff;
+}
 .feedzy-accordion-item .feedzy-accordion__icon:hover{
 	background: #E4E6E8;
 }
@@ -169,6 +185,9 @@
 
 .feedzy-accordion .feedzy-accordion-item{
 	margin-bottom: 30px;
+}
+.feedzy-accordion .feedzy-accordion-item.mb-0{
+	margin-bottom: 0;
 }
 .feedzy-accordion .feedzy-accordion-item .feedzy-accordion-item__button{
 	cursor: pointer;
@@ -1458,4 +1477,176 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 }
 .fz-select-control {
 	min-width: 100%;
+}
+
+.fz-radio{
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+.fz-radio input[type=radio].fz-radio-btn{
+	margin-right: 10px;
+}
+.fz-radio label{
+	color: #050505;
+	font-size: 16px;
+	line-height: 20px;
+}
+input[type=radio].fz-radio-btn{
+	position: relative;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #050505;
+	flex-shrink: 0;
+	margin: 0;
+	outline: 0;
+	box-shadow: none;
+	transition: all 0.3s ease-in-out;
+}
+input[type=radio].fz-radio-btn:focus{
+	border-color: #4268CF;
+}
+input[type=radio].fz-radio-btn:checked{
+	background: #4268CF;
+	border-color: #4268CF;
+}
+input[type=radio].fz-radio-btn:checked:before{
+	width: 8px;
+	height: 8px;
+	margin: 5px;
+	background: #ffffff;
+}
+
+input[type=checkbox].fz-checkbox-btn{
+	position: relative;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #050505;
+	flex-shrink: 0;
+	border-radius: 2px;
+	margin: 0;
+	outline: 0;
+	box-shadow: none;
+	transition: all 0.3s ease-in-out;
+}
+input[type=checkbox].fz-checkbox-btn:focus{
+	border-color: #4268CF;
+}
+input[type=checkbox].fz-checkbox-btn:checked{
+	background: #4268CF;
+	border-color: #4268CF;
+}
+input[type=checkbox].fz-checkbox-btn:checked:after{
+	content: "\f15e";
+	font-family: dashicons;
+	width: 16px;
+	height: 16px;
+	font-size: 16px;
+	line-height: 1;
+	color: #ffffff;
+	position: absolute;
+	inset: 0;
+	margin: auto;
+}
+input[type=checkbox].fz-checkbox-btn:before{
+	display: none;
+}
+
+.help-text.help-text-primary{
+	font-size: 16px;
+	line-height: 24px;
+	color: #2F5AAE;
+}
+.help-text.help-text-primary a{
+	font-weight: 700;
+	color: #2F5AAE;
+	text-decoration: underline;
+	font-style: italic;
+}
+
+.fz-row{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -15px;
+}
+.fz-row.fz-row-center{
+	align-items: center;
+}
+.fz-row .fz-col-md-6{
+	padding-left: 15px;
+	padding-right: 15px;
+	width: 50%;
+}
+
+.feedzy-accordion .feedzy-accordion-item .feedzy-accordion-checkbox__title .feedzy-accordion-item__button{
+	padding-left: 80px;
+	padding-top: 22px;
+	padding-bottom: 22px;
+}
+.feedzy-accordion .feedzy-accordion-item .feedzy-accordion-checkbox__title .fz-checkbox{
+	position: absolute;
+	left: 30px;
+	top: 50%;
+	margin-top: -10px;
+	width: 20px;
+	height: 20px;
+	z-index: 12;
+}
+.feedzy-accordion .feedzy-accordion-item .feedzy-accordion-checkbox__title .fz-checkbox input[type=checkbox].fz-checkbox-btn{
+	display: block;
+}
+.feedzy-accordion-item.fz-features-accordion{
+	border-radius: 8px;
+}
+.feedzy-accordion-item.fz-features-accordion .feedzy-accordion-item__content{
+	border-top: 1px solid #D9D9D9;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.pro-label.free-label{
+	background: rgba(47, 90, 174, 0.25);
+	border-radius: 6px;
+	color: rgba(47, 90, 174, 0.75);
+	text-transform: none;
+	font-size: 16px;
+	line-height: 19px;
+	padding: 2px 9px 4px;
+}
+
+.fz-features-list ul li{
+	padding: 25px 0;
+	display: flex;
+	align-items: center;
+}
+.fz-features-list ul li .icon{
+	width: 43px;
+	height: 43px;
+	flex-shrink: 0;
+	margin-right: 17px;
+	background: rgba(217, 217, 217, 0.4);
+	border-radius: 6px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.fz-features-list ul li .txt{
+	width: 100%;
+}
+
+.fz-btn-group{
+	display: flex;
+	flex-wrap: wrap;
+}
+.fz-btn-group .btn{
+	margin-bottom: 8px;
+	margin-right: 30px;
+}
+.fz-btn-group .btn:last-child{
+	margin-right: 0px;
+}
+
+
+@media (max-width: 767px){
+	.fz-row .fz-col-md-6{width: 100%;}
+	.fz-row .fz-col-md-6 .fz-form-group{padding-bottom: 8px;}
 }
