Save subscribe entries in themeisle API Codeinwp/feedzy-rss-feeds-pro#483

--- a/includes/views/css/style-wizard.css
+++ b/includes/views/css/style-wizard.css
@@ -289,6 +289,10 @@
     color: #ffffff;
 }
 
+.feedzy-wizard-fullscreen .fz-field-error {
+	color: #F00;
+}
+
 @media (max-width: 767px){
 	.wp-toolbar .feedzy-wizard-fullscreen{margin-top: 0;}
 	.feedzy-wizard .sw-theme-basic>.nav{max-width: 270px;}
