--- a/includes/views/css/style-wizard.css
+++ b/includes/views/css/style-wizard.css
@@ -76,13 +76,15 @@
 	font-size: 13px;
 	line-height: 16px;
 	text-decoration: none;
+	display: flex;
+    align-items: center;
 }
 .btn-link .dashicons{
 	width: 16px;
 	height: 16px;
 	font-size: 16px;
 	vertical-align: middle;
-	margin: 0 4px;
+	margin: 0 8px;
 }
 
 .feedzy-wizard{
