--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -483,4 +483,6 @@ input:checked + .feedzy-track:before {
 	font-weight: 400;
 	background: none !important;
 	color: #264494 !important;
+	border: none;
+	box-shadow: none;
 }
