--- a/css/settings.css
+++ b/css/settings.css
@@ -1460,3 +1460,9 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 .fz-select-control {
 	min-width: 100%;
 }
+.fz-form-group .CodeMirror-dialog {
+  padding: 8px 0;
+}
+.fz-form-group .CodeMirror-wrap {
+	border: 1px solid #D9D9D9;;
+}
