--- a/includes/gutenberg/src/style.scss
+++ b/includes/gutenberg/src/style.scss
@@ -217,3 +217,35 @@
 		font-weight: 700;
 	}
 }
+
+.fz-css-editor {
+	border: 1px solid #e2e4e7;
+	margin-bottom: 20px;
+}
+
+.fz-css-editor-help {
+	background: #f7f7f7;
+	padding: 20px;
+}
+
+.fz-css-errors {
+	display: flex;
+	flex-direction: column;
+
+	.span {
+		font-family: 'Courier New', Courier, monospace;
+	}
+
+	.components-notice {
+		&.is-error {
+			margin: 0;
+		}
+	}
+
+	pre {
+		overflow-x: scroll;
+		background: #f7f7f7;
+		border: 1px solid #e2e4e7;
+		padding: 5px;
+	}
+}
