Fix compatibility issue with the FSE editor #759

--- a/includes/gutenberg/src/style.scss
+++ b/includes/gutenberg/src/style.scss
@@ -217,3 +217,8 @@
 		font-weight: 700;
 	}
 }
+.feedzy-ui-autocomplete li.ui-menu-item {
+    font-size: 13px;
+    line-height: 1.4em;
+    color: #3c434a;
+}
