--- a/css/settings.css
+++ b/css/settings.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.cdnfonts.com/css/barlow');
-
 .feedzy-wrap *{
 	box-sizing: border-box;
 	margin: 0;
@@ -2158,17 +2156,34 @@ li.draggable-item .components-panel__body-toggle.components-button{
 	position: relative;
 }
 
+.feedzy-sale img {
+	width: 100%;
+}
+
 .feedzy-sale .feedzy-urgency {
 	position: absolute;
-	top: 15px;
-	left: 19px;
+
+	top: 10%;
+	left: 1.5%;
 
 	color: #FFF;
-	font-family: Barlow, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", sans-serif;
+	font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", sans-serif;
 	font-size: 14px;
 	font-style: normal;
 	font-weight: 700;
 	line-height: normal;
 	letter-spacing: 0.3px;
 	text-transform: uppercase;
+}
+
+@media(max-width: 480px) {
+	.feedzy-sale .feedzy-urgency {
+		font-size: 7px;
+	}
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+	.feedzy-sale .feedzy-urgency {
+		font-size: 10px;
+	}
 }
