--- a/css/settings.css
+++ b/css/settings.css
@@ -125,6 +125,10 @@
 	padding: 5px;
 }
 
+.feedzy-banner-dashboard:has(.tsdk-banner-cta) {
+	margin: 20px 0;
+}
+
 .feedzy-container{
 	max-width: 1224px;
 	margin: 0 auto;
