chore: update links to https

--- a/css/feedzy-rss-feed-import.css
+++ b/css/feedzy-rss-feed-import.css
@@ -4,7 +4,7 @@
  * Copyright: (c) 2016 Themeisle, themeisle.com
  * Version: 1.6.10
  * Plugin Name: FEEDZY RSS Feeds
- * Plugin URI: http://themeisle.com/plugins/feedzy-rss-feeds/
+ * Plugin URI: https://themeisle.com/plugins/feedzy-rss-feeds/
  * Author: Themeisle
  */
 
