--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -4,7 +4,7 @@
  * Copyright: (c) 2016 Themeisle, themeisle.com
  * Version: 4.4.15
  * Plugin Name: FEEDZY RSS Feeds
- * Plugin URI: http://themeisle.com/plugins/feedzy-rss-feeds/
+ * Plugin URI: https://themeisle.com/plugins/feedzy-rss-feeds/
  * Author: Themeisle
  */
 .feedzy-rss > ul {
