feat: add post author selection to Feed Imports

--- a/css/settings.css
+++ b/css/settings.css
@@ -614,6 +614,15 @@ fieldset[disabled] .form-control {
 	background: #D0D4D7;
 }
 
+.fz-form-wrap .chosen-container .chosen-results li.helper-text {
+	display: block;
+	background: white;
+	cursor: help;
+	font-size: 12px;
+	text-align: center;
+	color: #757575;
+}
+
 .date-range-group{
 	display: flex;
 	align-items: flex-end;
