--- a/css/settings.css
+++ b/css/settings.css
@@ -427,6 +427,9 @@ fieldset[disabled] .form-control {
 .fz-form-wrap .form-block .only-pro-content .only-pro-container .upgrade-alert{
 	width: 100%;
 }
+#fz-features .fz-form-wrap .form-block .only-pro-content .only-pro-container{
+	width: 100%;
+}
 
 .form-block-pro-text{
 	padding-top: 8px;
@@ -1215,6 +1218,30 @@ input.fz-switch-toggle[type=checkbox]:checked:before{
 	width: 33.34%;
 	padding-left: 12px;
 	padding-right: 12px;
+}
+.fz-auto-cat {
+	width: 100%;
+}
+.fz-auto-cat .fz-select-control {
+	min-width: auto;
+}
+.fz-auto-cat tr {
+	display: flex;
+	gap: 12px;
+	padding: 6px 0;
+}
+.fz-auto-cat .fz-auto-cat-col-8{
+	width: 66.66%;
+}
+.fz-auto-cat .fz-auto-cat-col-4{
+	width: 33.34%;
+	display: flex;
+	gap: 6px;
+}
+.fz-auto-cat-actions {
+	display: flex;
+	padding-top: 12px;
+	justify-content: flex-end;
 }
 
 .support-box-list{
