--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -131,3 +131,13 @@ span.feedzy-spinner {
 #TB_ajaxContent div.dry_run span i.fail {
 	color: #ca4a1f;
 }
+
+.feedzy-errors-dialog + .ui-widget-content .ui-dialog-buttonset {
+	width: 100%;
+}
+.feedzy-errors-dialog + .ui-widget-content button.feedzy-clear-logs {
+	margin-left: 0;
+}
+.feedzy-error.feedzy-api-error .notice-success {
+	color: #3c434a;
+}
