fix cancel button behaviour + small ui twist to the toggle

--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -23,10 +23,10 @@
 }
 
 input.feedzy-toggle-round + label {
-	width: 60px;
-	height: 22px;
+	width: 2rem;
+	height: 1rem;
 	border-radius: 22px;
-	background-color: #ddd;
+	background-color: #f1f1f1;
 }
 
 input.feedzy-toggle-round + label:before,
@@ -48,27 +48,22 @@ input.feedzy-toggle-round + label:before {
 }
 
 input.feedzy-toggle-round + label:after {
-	width: 23px;
-	height: 23px;
+	width: 0.75rem;
+	height: 0.75rem;
 	border-radius: 100%;
-	background-color: #fff;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+	background-color: #f6f7f7;
 	-webkit-transition: margin 0.4s;
 	transition: margin 0.4s;
 }
 
 input.feedzy-toggle-round:checked + label:before {
-	background-color: #44cf6c;
+	background-color:#2271b1;
 }
 
 input.feedzy-toggle-round:checked + label:after {
-	margin-left: 36px;
+	margin-left: 16px;
 }
 
-input.feedzy-toggle-round + label {
-	padding: 2px;
-	background-color: #ddd;
-}
 
 input.feedzy-toggle-round + label:before,
 input.feedzy-toggle-round + label:after {
@@ -90,10 +85,10 @@ input.feedzy-toggle-round + label:before {
 
 input.feedzy-toggle-round + label:after {
 	border-radius: 100%;
-	background-color: #fff;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+	background-color: #f1f1f1;
 	-webkit-transition: margin 0.4s;
 	transition: margin 0.4s;
+	margin-top:1px;
 }
 span.feedzy-spinner:not(.is-active) {
     display: none;
