small ui twist to the toggle

--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -25,6 +25,7 @@
 input.feedzy-toggle-round + label {
 	width: 2rem;
 	height: 1rem;
+	border: 1px solid #5555559c;
 	border-radius: 22px;
 	background-color: #f1f1f1;
 }
@@ -62,6 +63,10 @@ input.feedzy-toggle-round:checked + label:before {
 
 input.feedzy-toggle-round:checked + label:after {
 	margin-left: 16px;
+	background: #f1f1f1;
+}
+input.feedzy-toggle-round:checked + label{
+	border-color: #f6f7f7;
 }
 
 
@@ -85,7 +90,7 @@ input.feedzy-toggle-round + label:before {
 
 input.feedzy-toggle-round + label:after {
 	border-radius: 100%;
-	background-color: #f1f1f1;
+	background-color:#5555559c;
 	-webkit-transition: margin 0.4s;
 	transition: margin 0.4s;
 	margin-top:1px;
