--- a/css/settings.css
+++ b/css/settings.css
@@ -2000,7 +2000,8 @@ li.draggable-item .components-panel__body-toggle.components-button{
 .fz-action-control .fz-hide-icon .components-panel__arrow {
 	display: none;
 }
-.tagify__filter-icon{
+.tagify__filter-icon,
+.fz-action-icon {
 	width: 19px;
 	height: 19px;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M14.5 13.8002C13.4 13.8002 12.4 14.5002 12.1 15.6002H4V17.0002H12.1C12.4 18.0002 13.4 18.8002 14.5 18.8002C15.6 18.8002 16.6 18.1002 16.9 17.0002H20V15.5002H16.9C16.6 14.5002 15.6 13.8002 14.5 13.8002ZM11.9 7.0002C11.6 6.0002 10.6 5.2002 9.5 5.2002C8.4 5.2002 7.4 6.0002 7.1 7.0002H4V8.5002H7.1C7.4 9.5002 8.4 10.3002 9.5 10.3002C10.6 10.3002 11.6 9.6002 11.9 8.5002H20V7.0002H11.9Z' fill='%23050505'/%3E%3C/svg%3E");
@@ -2460,6 +2461,25 @@ li.draggable-item .components-panel__body-toggle.components-button{
 
 .fz-panel-tab .fz-panel-tab__content .components-base-control .components-datetime__timezone {
 	display: inline-block;
+}
+
+.fz-form-group .custom_fields .fz-form-group {
+	position: relative;
+}
+.fz-form-group .custom_fields .fz-form-group .fz-action-icon {
+	position: absolute;
+	top: 50%;
+	right: 2px;
+	cursor: pointer;
+	transform: translateY(-50%);
+	width: 40px;
+	height: 40px;
+	display: grid;
+	place-items: center;
+}
+.fz-form-group .custom_fields .fz-form-group .fz-action-icon.disabled {
+	pointer-events: none;
+	opacity: 0.5;
 }
 .fz-prompt-button {
 	gap: 7px;
