--- a/js/FeedzyLoop/editor.scss
+++ b/js/FeedzyLoop/editor.scss
@@ -5,3 +5,94 @@
         }
     }
 }
+
+.fz-condition-control {
+    padding: 0;
+
+    &.is-upsell {
+        opacity: 0.6;
+    }
+
+    .components-button {
+        width: 100%;
+        margin: 0;
+        padding: 6px 12px;
+        justify-content: center;
+    }
+}
+
+.fz-panel-tab {
+    z-index: 999999;
+    margin: 24px 0;
+
+    &__header {
+        display: flex;
+        background: #fff;
+        border: 1px solid #d5dadf;
+
+        &__label {
+            cursor: pointer;
+            flex-basis: 90%;
+            display: flex;
+            align-items: center;
+            padding-left: 15px;
+
+            &::selection {
+                background: none;
+            }
+        }
+
+        .components-button {
+            height: auto;
+            flex-basis: 10%;
+            justify-content: center;
+            padding: 10px 5px;
+            border-left: 1px solid #d5dadf;
+            border-radius: 0;
+
+            .dashicon {
+                margin: 2px;
+            }
+        }
+
+        &:hover {
+            background: #fafafb;
+        }
+    }
+
+    &__content {
+        background: #fff;
+        border: 1px solid #d5dadf;
+        border-top: none;
+        padding: 10px 15px;
+
+        .components-select-control {
+            label {
+                overflow: visible;
+                white-space: normal;
+            }
+        }
+
+        .components-base-control {
+            margin: 12px 0;
+
+            .components-dropdown {
+                width: 100%;
+
+                .components-button {
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                }
+            }
+
+            .components-datetime__time-field-hours-input {
+                min-width: 60px;
+            }
+
+            .components-datetime__timezone {
+                display: inline-block;
+            }
+        }
+    }
+}
