--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -138,3 +138,66 @@ span.feedzy-spinner {
 .feedzy-errors-dialog + .ui-widget-content button.feedzy-clear-logs {
 	margin-left: 0;
 }
+
+.wp-core-ui .fz-export-import-btn {
+	display: inline-flex !important;
+	align-items: center;
+}
+
+.wp-core-ui .fz-header-action {
+	display: inline-flex !important;
+	gap: 8px;
+}
+
+#fz_import_export_upsell .modal-content {
+	background: #fff;
+	border-radius: 3px;]
+	width: auto;
+	margin: 1.75rem auto  ;
+}
+#fz_import_export_upsell .modal-body {
+	text-align: center;
+}
+#fz_import_export_upsell .modal-header {
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	position: relative;
+}
+#fz_import_export_upsell .modal-header .dashicons {
+	font-size: 1.3em;
+	line-height: inherit;
+}
+#fz_import_export_upsell .modal-header h2 {
+	text-align: center;
+}
+#fz_import_export_upsell .close-modal {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+#fz_import_export_upsell .modal-footer .dashicons{
+
+	vertical-align: middle;
+	font-size: initial;
+}
+#fz_import_export_upsell .modal-footer {
+	padding-top: 10px;
+	margin-top: 10px;
+	text-align: center;
+}
+.fz-import-field {
+	background-color: #fff;
+	max-width: 400px;
+	width: 100%;
+	margin: 0 auto;
+	position: relative;
+	padding: 15px;
+	height: 120px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.fz-import-field.hidden {
+	display: none;
+}
