--- a/js/FeedzyLoop/style.scss
+++ b/js/FeedzyLoop/style.scss
@@ -1,5 +1,6 @@
 .wp-block-feedzy-rss-feeds-loop {
     display: grid;
+    gap: 24px;
 
     @media (min-width: 782px) {
         @for $i from 2 through 5 {
@@ -18,4 +19,8 @@
     }
 
     grid-template-columns: repeat(1, 1fr);
+
+    .wp-block-image.is-style-rounded img {
+        border-radius: 9999px;
+    }
 }
