--- a/css/settings.css
+++ b/css/settings.css
@@ -115,32 +115,18 @@
 	display: none;
 }
 
-.feedzy-banner:has(.tsdk-banner-cta) {
+.feedzy-banner:has(.themeisle-sale) {
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
-	padding: 1rem;
 	margin-bottom: 20px;
+	max-width: 1224px;
+	padding: 0 12px;
+}
+
+.feedzy-banner .themeisle-sale {
 	width: 100%;
-}
-
-.feedzy-banner:has(.tsdk-banner-cta) .tsdk-banner-urgency-text {
-	padding: 5px;
-}
-
-.feedzy-banner-dashboard {
-	display: none;
-}
-
-.feedzy-banner-dashboard:has(.tsdk-banner-cta) {
-	display: block;
-	margin: 20px 0;
-
-	/* Remove the properties added by .notice */
-	background: transparent;
-	border: unset;
-	box-shadow: unset;
-	padding: unset;
+	margin: 0;
 }
 
 .feedzy-container{
